# kdev-sql

./: CMakeLists.txt  kdevsqlsupport.desktop  kdevsqlsupport.desktop.cmake  queryworker.cpp  queryworker.h  results.ui  resulttablewidget.cpp  sqllanguagesupport.cpp  sqllanguagesupport.h  version.h.cmake
connections/: CMakeLists.txt  connections.cpp  kcm_kdev_sqlconnections.desktop
